<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_pontos_interesse">Points of Interest</string>
    <string name="title_profile">Profile</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="app_name">Throughout Portugal</string>
    <string name="login">Login</string>
    <string name="logo" />
    <string name="email_address">Email Address</string>
    <string name="button">Button</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="signup">Signup</string>
    <string name="emptyFieldError">This field cannot be empty!</string>
    <string name="smallPasswordError">Password needs at least 6 characters!</string>
    <string name="passwordsNotMatchError">Passwords do not match!</string>
    <string name="emailInvError">Please provide a valid email!</string>
    <string name="success">Success!</string>
    <string name="signupError">Failed to signup!</string>
    <string name="emailPasswordInv">Email or password is invalid!</string>
    <string name="back_to_login">Back to Login</string>
    <string name="wantToResetPass">Do you want to reset your password?</string>
    <string name="enterEmail">Enter your account email.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="passResetInfo">You will receive the password reset link if an account with this email exists.</string>
    <string name="resetLinkSent">Reset link sent to your email.</string>
    <string name="reset_password">Reset Password</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="bioAuthentication">Biometric Authentication</string>
    <string name="loginFinger">Login using fingerprint authentication</string>
    <string name="useAppPass">Use App Password</string>
    <string name="use_google_instead">Sign in with Google</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="fingerprint_authentication">Fingerprint Authentication</string>
    <string name="Language">Language</string>
    <string name="edit_avatar">Edit Avatar</string>
    <string name="empty_fav">No favorites on your list :(</string>
    <string name="available_avatar">Available Avatar:</string>
    <string name="history">History:</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="photo">Photo</string>
    <string name="based_in_my_location">Based in my location</string>
    <string name="choose_in_map">Choose in map</string>
    <string name="add_point">Add Point</string>
    <string name="regions">Regions</string>
    <string name="bragaHist">Braga is a city in the extreme north of Portugal, northeast of Porto. It is known for its heritage and religious events. To the east, the Bom Jesus do Monte complex has a neoclassical church perched on an elaborate 17-step staircase.</string>
    <string name="VianaCasteloHist">Viana do Castelo is a Portuguese city, capital of the district of the same name, in the North region, and integrated in the NUT III sub-region of Alto Minho. It is the seat of the municipality of Viana do Castelo - with an area of 319.02 km² and 85 445 inhabitants, which is subdivided into 27 parishes.</string>
    <string name="VilaRealHist">Vila Real is a Portuguese city and capital of the Vila Real district, located in the North Region, Douro sub-region and in the former province of Trás-os-Montes and Alto Douro, with 29 624 inhabitants in its urban perimeter. It is the capital of the traditional province of Trás-os-Montes and Alto Douro.</string>
    <string name="BragancaHist">Bragança is a Portuguese Raiana city, capital of the Bragança district, in the North Region and sub-region of Terras de Trás-os-Montes, in Northeast Portugal, with 21 853 inhabitants in the urban perimeter.</string>
    <string name="PortoHist">Porto is a coastal city in the northwest of Portugal known for its imposing bridges and the production of Port wine. In the medieval district of Ribeira, on the banks of the river, narrow cobbled streets pass through the houses and restaurants of the merchants. The Church of San Francisco is known for its lush Baroque interior.</string>
    <string name="AveiroHist">Aveiro is a city on the Portuguese west coast founded by a lagoon known as Ria de Aveiro. It is distinguished by its canals navigated by colorful boats (moliceiro boats), traditionally used for harvesting algae.</string>
    <string name="ViseuHist">Viseu is a Portuguese city in the district of the same name, located in the province of Beira Alta, Centro Region and sub-region of Dão-Lafões. The city of Viseu has 57975 inhabitants in the center and an urban area with around 66143 inhabitants, being one of the main cities in the Center of Portugal region..</string>
    <string name="GuardaHist">Guarda is a Portuguese city. With 1,056 meters of maximum altitude, it is the highest city in the country. With 26 565 inhabitants in its urban perimeter, capital of the district of Guarda, located in the statistical region of the Center and sub-region of Beiras and Serra da Estrela.</string>
    <string name="CoimbraHist">Coimbra, a city on the riverside in central Portugal and the countrys former capital, is home to a preserved medieval old town and the historic University of Coimbra. Built on the site of an old palace, the University is renowned for its baroque library, the Joanine Library, and its XVIII bell tower.</string>
    <string name="CasteloBrancoHist">Castelo Branco is a Portuguese city, capital of the Castelo Branco district and located in the statistical region of the Center, in the sub-region of Beira Baixa and in the old province with the same name, with around 34 000 inhabitants in its urban perimeter.</string>
    <string name="LeiriaHist">Leiria is a Portuguese city, capital of the district of Leiria, in the province of Beira Litoral, seat of the Intermunicipal Community of the Region of Leiria, in the Center of Portugal, with 50 533 inhabitants in its urban perimeter. The inhabitants of this city are called leirienses or coliponenses.</string>
    <string name="SantaremHist">Santarém is a Portuguese city, capital of the district of Santarém, located in the province of Ribatejo and in the statistical region of Alentejo, with 29 929 inhabitants in its urban perimeter. It is the seat of the municipality of Santarém with an area of 552.54 km² and 61 752 inhabitants, subdivided into 18 parishes.</string>
    <string name="LisboaHist">Lisbon is a capital of Portugal, located on the coast. From the imposing São Jorge Castle, the view covers the pastel colored buildings of the old city, the Tagus estuary and the 25 de Abril Bridge. Nearby, the National Tile Museum displays 5 centuries of decorative tiles.</string>
    <string name="PortalegreHist">Portalegre is a Portuguese city, capital of the Portalegre district, located in the interior of Portugal, in the region of Alentejo, sub-region of Alto Alentejo. In 2011, the municipality had 24 930 inhabitants. Portalegre is the district capital city with the least population in Portugal and the largest city in its district.</string>
    <string name="EvoraHist">Évora is the capital of the south-central region of Portugal, the Alentejo. In the historic center of the city is the ancient Roman Temple of Évora (Temple of Diana). Nearby, houses surround the Sé Catedral de Évora, a huge Gothic structure that started in the 12th century. The Church of São Francisco has Gothic and Baroque architecture, together with the Chapel of Bones.</string>
    <string name="SetubalHist">Setúbal with an area of 230.33 km² and 116 330 inhabitants (2017), subdivided into 5 parishes. The municipality is limited to the west by the municipality of Sesimbra, to the northwest by Barreiro, to the north and east by Palmela and, to the south, the Sado estuary separates it from the municipalities of Alcácer do Sal and Grândola.</string>
    <string name="BejaHist">Beja is a Portuguese city belonging to the region of Alentejo and sub-region of Baixo Alentejo, capital of the district of Beja and capital of the Lower Alentejo with about 23 400 inhabitants in its urban perimeter, and is also the headquarters of the Diocese of Beja.</string>
    <string name="FaroHist">Faro is the capital of the Algarve region, in the south of Portugal. The citys neoclassical Arco da Vila is located on the site of a door that was part of the original Moorish walls. The monumental arch leads to the old town, with its cobbled streets.</string>
    <string name="distance">Distance</string>
    <string name="point_name">Point Name</string>
</resources>